examples/bad/hold_match_for_move.mko
// EXPECT: use of moved
// match + for product: move inside for on match arm poisons after match.
fn consume(t: string) {}

fn main() {
    hold let s = "hi"
    match 1 {
        0 => { },
        _ => {
            for i in range 1 {
                consume(s)
            }
        },
    }
    print(s)
}
